WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
304039
AX: Accessibility text stitching should not stitch the disclosure triangle generated by summary / details (current behavior breaks accessibility/missing-content-inside-expanded-details.html)
https://bugs.webkit.org/show_bug.cgi?id=304039
Summary
AX: Accessibility text stitching should not stitch the disclosure triangle ge...
Tyler Wilcock
Reported
2025-12-11 16:36:23 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-12-11 16:36:29 PST
<
rdar://problem/166338805
>
Tyler Wilcock
Comment 2
2025-12-11 16:39:38 PST
Pull request:
https://github.com/WebKit/WebKit/pull/55285
EWS
Comment 3
2025-12-12 08:31:48 PST
Committed
304361@main
(c3cdf09dca55): <
https://commits.webkit.org/304361@main
> Reviewed commits have been landed. Closing PR #55285 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug