AX: Accessibility text stitching should not stitch the disclosure triangle generated by summary / details (current behavior breaks accessibility/missing-content-inside-expanded-details.html) https://bugs.webkit.org/show_bug.cgi?id=304039 rdar://166338805

Reviewed by Joshua Hoffman.

With this commit, we stop adding the disclosure triangle generated by summary / details to any stitch group. This was
a side effect of https://commits.webkit.org/303962@main, which added list marker stitching. As an implementation detail
of rendering, disclosure triangles are generated via RenderListMarker, which is why that commit introduced the issue.

Fixes accessibility/missing-content-inside-expanded-details.html with AccessibilityTextStitchingEnabled.

* Source/WebCore/accessibility/AccessibilityNodeObject.cpp:
(WebCore::AccessibilityNodeObject::stitchGroups const):
* Source/WebCore/rendering/RenderListMarker.cpp:
(WebCore::RenderListMarker::isDisclosureMarker const):
* Source/WebCore/rendering/RenderListMarker.h:

Canonical link: https://commits.webkit.org/304361@main